[gd_scene load_steps=6 format=3 uid="uid://douh8pscjw7hm"]

[ext_resource type="Texture2D" uid="uid://6x38yqia731l" path="res://Graphics/Menus/DataBox.png" id="1_k7mkp"]
[ext_resource type="Script" uid="uid://fhosnxb7v1xy" path="res://Scripts/Menu/save_panel.gd" id="1_vt2ve"]
[ext_resource type="Texture2D" uid="uid://gdlceifl27va" path="res://Graphics/Menus/MenuBGTiles.png" id="2_8ocpa"]
[ext_resource type="Texture2D" uid="uid://d3g0w6uwq7bvj" path="res://Graphics/Menus/Icons_All.png" id="2_85gd5"]
[ext_resource type="Texture2D" uid="uid://b2m8w8il8ycx8" path="res://Graphics/Menus/CharacterPreviews.png" id="4_4i5fd"]

[node name="SavePanel" type="Node2D"]
script = ExtResource("1_vt2ve")

[node name="DataBox" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(48, 96)
texture = ExtResource("1_k7mkp")

[node name="TitleBanner" type="Sprite2D" parent="."]
position = Vector2(45, 32)
texture = ExtResource("2_8ocpa")
region_enabled = true
region_rect = Rect2(0, 48, 96, 56)

[node name="LevelIcon" type="Sprite2D" parent="TitleBanner"]
unique_name_in_owner = true
position = Vector2(-16, -12)
texture = ExtResource("2_85gd5")
centered = false
hframes = 4
vframes = 7

[node name="CharacterIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 2
position = Vector2(46, 96)
texture = ExtResource("4_4i5fd")
vframes = 8
